# project-Group28

./: .buildinfo  LICENSE  Makefile  README.html  README.md  _config.yml  _toc.yml  data_clean.html  data_cleaning.html  data_cleaning.ipynb  data_visualization.html  environment.yml  genindex.html  main.html  main.ipynb  model_building.html  model_building.ipynb  objects.inv  project-description.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: book.yml
_sources/: README.md  data_cleaning.ipynb  data_visualization.ipynb  main.ipynb  model_building.ipynb
results/: city_stats.csv  price_summary.csv  results_df.csv  summary.csv
utils/: __init__.py  pipeline_utils.py  setup.py
utils/tests/: test_pipeline_utils.py
