# Declarative configuration for setup.py

# For more details on this format, see the official docs here:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# And a useful annotated template can be found here:
# https://gist.github.com/althonos/6914b896789d3f2078d1e6237642c35c

[metadata]
name             = utils
version          = attr: utils.__version__
author           = Shengnan Li
author_email     = sli155@berkeley.edu
description      = A collection of utility functions and classes designed to streamline and simplify various tasks throughout the project.  
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords         = utils, pipeline_utils
license          = BSD 3-Clause License
classifiers      =
	Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
# These should be consistent with what is specified in the environment.yml
python_requires  == 3.10,
install_requires =
	pandas
	scikit-learn
	tqdm

[options.packages.find]
exclude =
    examples*
    docs*